# DS6050_ML3_Final_Proj

./: .gitignore  EfficientNet_Transfer_learning.ipynb  README.md  ROADMAP.md  dashboard.html  dashboard_base_23_10.html  dashboard_v5_23_11_10.html  dashboard_v6.html  experiment_notes.md  gitbranchingguide.md  hyperparameter_sweep_reference_card.html  hyperparameter_sweep_reference_card_v2.html  notes_dump.md  pyproject.toml  tmux_guide.md  yolo26_transfer_learning.ipynb
eda_outputs/: eda_report.md
runs/detect/baseline_yolo26l/validation/: predictions.json  test_metrics.csv  test_metrics.txt
runs/detect/sharks_v4_frozen/: args.yaml  results.csv
runs/detect/sharks_v4_frozen/validation/: test_metrics.csv  test_metrics.txt
runs/detect/sharks_v5_freeze10/: args.yaml  results.csv
runs/detect/sharks_v5_freeze10/validation/: predictions.json  (+2 more)
runs/detect/sharks_v5_freeze23/: args.yaml  results.csv
scripts/: baseline_validate.py  config.py  dashboard.py  download_data.py  explore_data.py  generate_surface_stl.py  hyperparameter_search.py  plot_results.py  plot_training_curves.py  plot_training_curves_multi.py  predict.py  test_any_image.py  train.py  tune.py  validate.py
scripts/3D_printing/: generate_border_stl.py  generate_surface_stl.py  generate_surface_stl_manifold.py
stl_output/: band_1_valley.stl  band_2_low.stl  band_3_high.stl  band_4_peak.stl  base_white.stl  border.stl  border_frame.stl  border_ticks.stl
stl_output01/: band_1_valley.3mf  band_4_peak.stl  border_frame.stl
tune_sweep_results/: sweep_20260407_093237.csv  sweep_20260408_111034.csv
(+8 files in other folders)
